--- a/portfólio novo/index.html
+++ b/portfólio novo/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <header class="header">
+  <header class="header content">
     <a class="logo" href="">
       <img src="/assets/logo.png" alt="">
     </a>
@@ -30,7 +30,7 @@
     </nav>
   </header>
 
-  <section class="conteudo justify-center">
+  <section class="conteudo justify-center content">
 
     <div class="readme">
       <h1> Coloque suas <br> <span>ideas</span> em movimento </h1>
@@ -47,7 +47,7 @@
   </section>
 
 
-  <section class="sobre">
+  <section class="sobre content">
     <div class="sobre-img">
       <img src="/assets/undraw_profile_6l1l.png" alt="">
     </div>
@@ -60,7 +60,7 @@
   </section>
 
 
-  <section class="footer">
+  <section class="footer content">
     <div class="direitos">
       <p>Todos os direitos reservados © 2021 Vinicius Rodrigues</p>
     </div>
